Remove game phase area definitions for now